backend/src/main/java/com/example/articlewithalexandr/util/errors/MyException.java
package com.example.articlewithalexandr.util.errors;

/**
 * @author Vlad Utts
 */
public class MyException extends RuntimeException{
    public MyException(String message) {
        super(message);
    }
}
